--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2327,7 +2327,7 @@ h3 a {
 }
 
 /* line 1788, ../sass/style.scss */
-.select .view-lesson-collection span {
+.lessonCollectionSection .view-lesson-collection span {
   display: block;
 }
 
