--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1785,7 +1785,7 @@ h3 {
 .lessonCollectionSection table td.active{
     background: none;
 }
-.select .view-lesson-collection span{
+.lessonCollectionSection .view-lesson-collection span{
     display: block;
 }
 #edit-field-portion-tid-wrapper label,
