trying to fix the width select drop down after click

--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2357,7 +2357,7 @@ h3 a {
   width: 150px;
 }
 /* line 1816, ../sass/style.scss */
-.lessonCollectionSection form select option :hover {
+.lessonCollectionSection form select option :after {
   width: auto;
 }
 
