--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1811,7 +1811,8 @@ h3 {
 // span.lessonsCourse:after{
 // 	width:100%;
 // }
-.lessonCollectionSection form select option{
+.lessonCollectionSection form select option,
+#teachingsSectionHeaderBar select option{
 	width:150px;
 }
 
