--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1812,7 +1812,8 @@ h3 {
 // 	width:100%;
 // }
 .lessonCollectionSection form select option,
-#teachingsSectionHeaderBar select option{
+#teachingsSectionHeaderBar select option,
+#views-exposed-form-taxonomy-term-page select option{
 	width:150px;
 }
 
